[package]
name = "rpc-json-client"
version = "0.1.2-alpha.0"
authors = ["Urkel Engineering <engineering@urkellabs.com>"]
edition = "2018"
license = "MIT"
description = "A generic rpc client that handles JSON"

[dependencies]

# Unknown External
futures = "0.3.13"
async-std = "1.9.0"

serde = "1"
serde_derive = "1"
serde_json = "1"

surf = "2.1.0"

log = "0.4"
http-types = "2.0.0"
http-client = "4.0.0"
isahc = { version = "0.9", default-features = false, features = ["http2"]  }
base64 = "0.13"
