[package]
name = "rpc-json-client"
version = "0.1.2-alpha.0"
authors = ["Urkel Engineering <engineering@urkellabs.com>"]
edition = "2021"
license = "MIT"
description = "A generic rpc client that handles JSON"

[dependencies]

# Unknown External
futures = "0.3.17"
async-std = "1.10.0"

serde = "1"
serde_derive = "1"
serde_json = "1"

surf = "2.3.2"

log = "0.4"
base64 = "0.13"
